Fix general layout issues
Remove comments and check accessibility for webpage, fix proficiency section and ensure document looks good for tablet screen size

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,16 +1,4 @@
 /*-----------------------------------*\
-  #LARGER MOBILE SCREEN SIZE
-\*-----------------------------------*/
-
-/* @media screen and (min-width: 370px) {
-    header a {
-        width: 300.1px;
-    }
-
-    
-}   */
-
-/*-----------------------------------*\
   #TABLET SCREEN SSIZE
 \*-----------------------------------*/
 
@@ -24,6 +12,8 @@
     h1 { font-size: 2.25rem; }
 
     h2 { font-size: 2.1175rem;}
+
+    header { height: 300.1px; }
 
     header a {
         width: 300.1px;
@@ -40,7 +30,10 @@
         padding: 59.74px 69.34px;
     }
 
-    .descriptive-text { margin-top: 11.62px; }
+    .descriptive-text { 
+        margin-top: 11.62px;
+        line-height: 24px;
+    }
 
     .proficiency-section { 
         padding: 51.14px 27.4px;
@@ -50,21 +43,35 @@
     .proficiency-section > .container { gap: 15px; }
 
     .proficieny-level {
-        grid-template-columns: 25% 1fr;
-        gap: 45.21px;
+        grid-template-columns: 141px 1fr;
+        gap: 46.21px;
     }
 
     .progress-track { height: 26.62px; }
 
+    .proficieny-level:nth-child(1) .progress-bar {
+        width: 317.04px; 
+    }
+
+    .proficieny-level:nth-child(2) .progress-bar {
+        width: 232.34px;
+    }
+
+    .proficieny-level:nth-child(3) .progress-bar {
+        width: 113.75px;
+    }
+
+    .proficieny-level:nth-child(4) .progress-bar {
+        width: 183.93px;
+    }
+
     .skills-section { 
-        /* width: 49%; */
         padding: 28px 28px 0;
     }
 
     .skills-section ul {
-        /* margin-top: 39px; */
         margin-bottom: 31.47px;
-        /* gap: 19.36px; */
+
     }
 
     .skill-tag {
@@ -100,7 +107,6 @@
     .project-card:nth-child(4) .ri-heart-fill { opacity: 0.5; }
     
     .education-section { 
-        /* width: 69%; */
         margin-right: 2%;
         padding: 29px 32px;
     }
@@ -108,7 +114,6 @@
     .education-info,
     .experience-info { 
         width: 267px;
-        /* margin-right: 30.79px; */
     }
 
     .education-section .card { padding: 34.01px 30.2px; }
@@ -159,8 +164,6 @@
         width: 41.14px;
         height: 41.14px;
     }
-
-    /* .card .experience-info { width: 30%; } */
 
     .experience-section { padding: 31px 27px; }
 
@@ -213,8 +216,8 @@
     }
 
     .projects-section > .container {    
-        grid-template-columns: repeat(4, 0.5fr); 
-        gap: 49px;
+        grid-template-columns: repeat(4, 1fr);
+
     }
 
     .education-section { 
@@ -241,6 +244,7 @@
     }
 } 
 
+
 /*-----------------------------------*\
   #DESKTOP AND BIGGER THAN DESKTOP 
 \*-----------------------------------*/
@@ -250,6 +254,10 @@
         width: 1321.79px;
         margin: 3rem auto;
     } 
+
+    .projects-section > .container {
+        grid-template-columns: repeat(4, 272px);
+    }
 
     .education-section {
         width: 994.69px;
