--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,6 +57,13 @@ h2 {
     color: var(--Light-Teal)!important ;
 }
 
+.project-card:hover,
+.education-section .card:hover,
+.experience-section .card:hover,
+a {
+    cursor: pointer;
+}
+
 /*-----------------------------------*\
   #RESET STYLES
 \*-----------------------------------*/
@@ -92,7 +99,7 @@ a {
 img {
     width: 100%;
     height: 100%;
-    /*  */
+    cursor: pointer;
 }
 
 section,
@@ -104,37 +111,6 @@ footer {
 /*-----------------------------------*\
   #LAYOUT
 \*-----------------------------------*/
-
-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 7px;
-    margin-bottom: 15px;
-    height: 137px;
-} 
-
-header a {
-    width: 147px;
-    background-color: var(--White);
-    border-radius: 12px;
-    aspect-ratio: 1 / 1;
-    height: 100%;
-}
-
-header a > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    aspect-ratio: 1 / 1;
-    border-radius: 12px;
-}
-
-header section {
-    width: 163px;
-    height: 137px;
-    padding: 19.5px 12px;
-}
 
 main { 
     clear: both; 
@@ -173,6 +149,43 @@ main > section { margin-bottom: 15px; }
 }
 
 /*-----------------------------------*\
+  #HEADER
+\*-----------------------------------*/
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 7px;
+    margin-bottom: 15px;
+    height: 137px;
+} 
+
+header a {
+    width: 147px;
+    background-color: var(--White);
+    border-radius: 12px;
+    aspect-ratio: 1 / 1;
+    height: 100%;
+}
+
+header a > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    aspect-ratio: 1 / 1;
+    border-radius: 12px;
+}
+
+header section {
+    width: 163px;
+    height: 137px;
+    padding: 19.5px 12px;
+}
+
+.descriptive-text { margin-top: 6px; }
+
+/*-----------------------------------*\
   #PROFICIENCY SECTION
 \*-----------------------------------*/
 
@@ -188,6 +201,8 @@ main > section { margin-bottom: 15px; }
     font-size: var(--font-size-4);
 }
 
+.proficiency-text span { margin-right: 12px; }
+
 .proficiency-section > .container {
     display: grid;
     gap: 10px;
@@ -196,7 +211,7 @@ main > section { margin-bottom: 15px; }
 
 .proficieny-level {
     display: grid;
-    grid-template-columns: 20.7% 1fr;
+    grid-template-columns: 56px 1fr;
     align-items: center;
     gap: 17px;
 } 
@@ -204,8 +219,6 @@ main > section { margin-bottom: 15px; }
 .progress-track {
   width: 100%;
   height: 11px;
-  /* background-color: #ccc;
-  border-radius: 4px; */
   overflow: hidden;
     border-radius: 3px;
 }
@@ -218,23 +231,23 @@ main > section { margin-bottom: 15px; }
 }
 
 .proficieny-level:nth-child(1) .progress-bar {
-    width: 41.19%;
     height: 100%;
+    width: 131px;
 }
 
 .proficieny-level:nth-child(2) .progress-bar {
-    width: 	30.19%;
     height: 100%;
+    width: 96px;
 }
 
 .proficieny-level:nth-child(3) .progress-bar {
-    width: 414.78%;
     height: 100%;
+    width: 47px;
 }
 
 .proficieny-level:nth-child(4) .progress-bar {
-    width: 14.78%;
     height: 100%;
+    width: 47px;
 }
 
 /*-----------------------------------*\
@@ -255,12 +268,21 @@ main > section { margin-bottom: 15px; }
     list-style: none;
 }
 
+
+.skills-section ul > li:hover {
+    background-color: var(--Desaturated-Teal);
+    opacity: .8;
+    color: var(--White);
+    cursor: pointer;
+}
+
+.skills-section ul > li:focus { outline: 1px solid var(--Slate-Gray); }
+
 /*-----------------------------------*\
   #PROJECTS SECTION
 \*-----------------------------------*/
 .projects-section { 
     padding: 15px 15px 17px; 
-    /* height: 632px; */
 }
 
 .projects-section > h2 { margin-bottom: 6.34px; }
@@ -268,7 +290,6 @@ main > section { margin-bottom: 15px; }
 .projects-section > .container {
     display: grid;
     grid-template-columns: repeat(2, 139px);
-    /* grid-template-columns: repeat(auto-fit, minmax(139px, 1fr)); */
     gap: 12.73px;
     margin-bottom: 17px;
     justify-content: center;
@@ -277,10 +298,8 @@ main > section { margin-bottom: 15px; }
 .project-card {
     padding: 12px 9.69px;
     border-radius: 12.11px;
-    /* margin-top: 6.34px; */
     background: var(--Light-Teal);
     color: var(--Black);
-    /* height: 267px; */
     display: grid;
     gap: 9.69px;
 }
@@ -288,6 +307,8 @@ main > section { margin-bottom: 15px; }
 .project-card .ri-heart-fill { display: none; }
 
 .project-card .ri-heart-fill { color: var(--Rust); }
+
+.project-card.active-card .ri-heart-fill { display: block; }
 
 .projects-section .project-card > .card-header {
     display: flex;
@@ -404,7 +425,6 @@ main > section { margin-bottom: 15px; }
 }
 
 .svg-container.Languages {
-    /* grid-template-rows: repeat(3, 17px); */
     padding: 11.41px 13px;
 }
 
